# Simple installation

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(cmake/base.cmake)
INCLUDE(cmake/python.cmake)

SET(PROJECT_NAME comptes)
SET(PROJECT_DESCRIPTION
  "Simple python interface to follow bank account"
  )
SET(PROJECT_URL "")

SETUP_PROJECT ()

# search for python
FINDPYTHON(2.7 EXACT REQUIRED)
INSTALL (FILES
  account.py
  entry.py
  frame.py
  line.py
  DESTINATION ${PYTHON_SITELIB})
INSTALL (FILES comptes DESTINATION bin
  PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
  WORLD_EXECUTE WORLD_READ)

SETUP_PROJECT_FINALIZE ()
